--- a/order.html
+++ b/order.html
@@ -229,9 +229,130 @@
 											</div>
 										</div>
 										<div class="fillorder__drop" id="timeDrop">
-											<div class="fillorder__close js-drop-close" data-drop="payDrop"></div>
-											<div class="fillorder__dark-block"> 
-												<div class="fillorder__"></div>
+											<div class="fillorder__close js-drop-close" data-drop="timeDrop"></div>
+											<div class="fillorder__dark-blocks">
+												<div class="fillorder__dark-block fillorder__dark-block--nopadding">
+													<input class="fillorder__dark-block-input" id="timeNow" type="radio" name="time" checked>
+													<label class="fillorder__dark-block-label" for="timeNow">
+														<div class="fillorder__dark-block-text">Как сожно скорее</div>
+														<div class="fillorder__dark-block-radio"></div>
+													</label>
+												</div>
+												<div class="fillorder__dark-block fillorder__dark-block--nopadding">
+													<input class="fillorder__dark-block-input" id="timeAfter" type="radio" name="time">
+													<label class="fillorder__dark-block-label" for="timeAfter">
+														<div class="fillorder__dark-block-text">Попозже</div>
+														<div class="fillorder__dark-block-radio"></div>
+													</label>
+												</div>
+											</div>
+											<div class="fillorder__dark-block fillorder__dark-block--slider">
+												<div class="fillorder__sliders"> 
+													<div class="fillorder__slider" id="sliderDate">
+														<div class="swiper-wrapper"> 
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">Сегодня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">Завтра</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">6 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">7 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">8 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">9 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">10 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">11 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">Сегодня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">Завтра</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">6 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">7 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">8 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">9 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">10 июня</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">11 июня</div>
+															</div>
+														</div>
+													</div>
+													<div class="fillorder__slider" id="sliderTime">
+														<div class="swiper-wrapper"> 
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">10:00 - 10:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">10:30 - 11:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">11:00 - 11:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">11:30 - 12:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">12:00 - 12:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">12:30 - 13:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">13:00 - 13:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">13:30 - 14:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">10:00 - 10:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">10:30 - 11:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">11:00 - 11:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">11:30 - 12:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">12:00 - 12:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">12:30 - 13:00</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">13:00 - 13:30</div>
+															</div>
+															<div class="swiper-slide"> 
+																<div class="fillorder__slide-item">13:30 - 14:00</div>
+															</div>
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
