--- a/cancelled-order.html
+++ b/cancelled-order.html
@@ -118,14 +118,14 @@
 							<h1 class="backtitle__text">№298456548</h1><a class="backtitle__cross" href="home.html"> </a>
 						</div>
 						<!--	/backtitle-->
-						<div class="order__status-title"> <img src="img/cancelled.png" alt=""><span>8 апреля 2054</span></div>
+						<div class="order__status-title"> <img src="img/cancelled.webp" alt=""><span>8 апреля 2054</span></div>
 						<div class="order__whatsapp-mobile"> 
 							<div class="btn btn--green">Управлять в WhatsApp</div>
 						</div>
 						<div class="order__items"> 
 							<div class="order__item order__item--big">
 								<div class="order__food"> 
-									<div class="order__food-left"><a class="order__food-img order__food-img--orange" href="#"><img src="img/food.png" alt=""></a>
+									<div class="order__food-left"><a class="order__food-img order__food-img--orange" href="#"><img src="img/food.webp" alt=""></a>
 										<div class="order__food-title"> <a href="#">Картофель с луком и белыми грибами</a>
 											<ul class="order__food-list tablet-visible">
 												<li>2 шт.</li>
@@ -142,7 +142,7 @@
 									</div>
 								</div>
 								<div class="order__food"> 
-									<div class="order__food-left"><a class="order__food-img order__food-img--blue" href="#"><img src="img/food.png" alt=""></a>
+									<div class="order__food-left"><a class="order__food-img order__food-img--blue" href="#"><img src="img/food.webp" alt=""></a>
 										<div class="order__food-title"> <a href="#">Тар-тар из лососся на авокадо</a>
 											<ul class="order__food-list tablet-visible">
 												<li>10 шт.</li>
