--- a/cart.html
+++ b/cart.html
@@ -120,7 +120,7 @@
 						<!--	/backtitle-->
 						<form class="cart__form" action="#"> 
 							<div class="cart__item"> 
-								<div class="cart__left"><a class="cart__img" href="#"> <img src="img/food.png" alt=""></a>
+								<div class="cart__left"><a class="cart__img" href="#"> <img src="img/food.webp" alt=""></a>
 									<div class="cart__content">
 										<div class="cart__title"> <a href="#">Картофель с луком и белыми грибами</a></div>
 										<div class="cart__text">По домашнему</div>
@@ -149,7 +149,7 @@
 								</div>
 							</div>
 							<div class="cart__item"> 
-								<div class="cart__left"><a class="cart__img" href="#"> <img src="img/food.png" alt=""></a>
+								<div class="cart__left"><a class="cart__img" href="#"> <img src="img/food.webp" alt=""></a>
 									<div class="cart__content">
 										<div class="cart__title"> <a href="#">Тар-тар из лососся на авокадо</a></div>
 									</div>
@@ -229,61 +229,61 @@
 							<div id="reccomendSlider"> 
 								<div class="swiper-wrapper"> 
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--orange"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
 											</div></a></div>
 									<div class="swiper-slide"> <a class="reccomend__item" href="#">
-											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.png" alt=""></div>
+											<div class="reccomend__img reccomend__img--blue"> <img src="img/food.webp" alt=""></div>
 											<div class="reccomend__content"> 
 												<div class="reccomend__subtitle">Картофель с луком и белыми грибами</div>
 												<div class="reccomend__text">860₽</div>
