--- a/current-order.html
+++ b/current-order.html
@@ -154,7 +154,7 @@
 						<div class="order__items"> 
 							<div class="order__item order__item--big">
 								<div class="order__food"> 
-									<div class="order__food-left"><a class="order__food-img order__food-img--orange" href="#"><img src="img/food.png" alt=""></a>
+									<div class="order__food-left"><a class="order__food-img order__food-img--orange" href="#"><img src="img/food.webp" alt=""></a>
 										<div class="order__food-title"> <a href="#">Картофель с луком и белыми грибами</a>
 											<ul class="order__food-list tablet-visible">
 												<li>2 шт.</li>
@@ -171,7 +171,7 @@
 									</div>
 								</div>
 								<div class="order__food"> 
-									<div class="order__food-left"><a class="order__food-img order__food-img--blue" href="#"><img src="img/food.png" alt=""></a>
+									<div class="order__food-left"><a class="order__food-img order__food-img--blue" href="#"><img src="img/food.webp" alt=""></a>
 										<div class="order__food-title"> <a href="#">Тар-тар из лососся на авокадо</a>
 											<ul class="order__food-list tablet-visible">
 												<li>10 шт.</li>
