--- a/order.html
+++ b/order.html
@@ -233,17 +233,11 @@
 											<div class="fillorder__dark-blocks">
 												<div class="fillorder__dark-block fillorder__dark-block--nopadding">
 													<input class="fillorder__dark-block-input" id="timeNow" type="radio" name="time" checked>
-													<label class="fillorder__dark-block-label" for="timeNow">
-														<div class="fillorder__dark-block-text">Как сожно скорее</div>
-														<div class="fillorder__dark-block-radio"></div>
-													</label>
+													<label class="fillorder__dark-block-label" for="timeNow"><span class="fillorder__dark-block-text">Как сожно скорее</span><span class="fillorder__dark-block-radio"></span></label>
 												</div>
 												<div class="fillorder__dark-block fillorder__dark-block--nopadding">
 													<input class="fillorder__dark-block-input" id="timeAfter" type="radio" name="time">
-													<label class="fillorder__dark-block-label" for="timeAfter">
-														<div class="fillorder__dark-block-text">Попозже</div>
-														<div class="fillorder__dark-block-radio"></div>
-													</label>
+													<label class="fillorder__dark-block-label" for="timeAfter"><span class="fillorder__dark-block-text">Попозже</span><span class="fillorder__dark-block-radio"></span></label>
 												</div>
 											</div>
 											<div class="fillorder__dark-block fillorder__dark-block--slider">
