--- a/modals.html
+++ b/modals.html
@@ -2771,15 +2771,15 @@
 						<div class="product__text">Это вкусное и сытное блюдо является любимым блюдом во многих семьях, полюбите его и вы.</div>
 						<div class="product__subtitle">Дополнительно:</div>
 						<div class="product__item"> 
-							<input class="product__input" id="option_0" type="radio" name="option">
+							<input class="product__input" id="option_0" type="checkbox" name="option">
 							<label class="product__label" for="option_0"> <span>Побольше лука</span><span>+ 20&#8381;<span class="product__radio"> </span></span></label>
 						</div>
 						<div class="product__item"> 
-							<input class="product__input" id="option_1" type="radio" name="option">
+							<input class="product__input" id="option_1" type="checkbox" name="option">
 							<label class="product__label" for="option_1"> <span>По домашнему</span><span>0&#8381;<span class="product__radio"> </span></span></label>
 						</div>
 						<div class="product__item"> 
-							<input class="product__input" id="option_2" type="radio" name="option">
+							<input class="product__input" id="option_2" type="checkbox" name="option">
 							<label class="product__label" for="option_2"> <span>Грибов побольше</span><span>+ 300&#8381;<span class="product__radio"> </span></span></label>
 						</div>
 						<div class="product__bottom"> 
