--- a/order.html
+++ b/order.html
@@ -347,6 +347,7 @@
 														</div>
 													</div>
 												</div>
+												<div class="fillorder__choose btn js-drop-close" data-drop="timeDrop">Выбрать</div>
 											</div>
 										</div>
 									</div>
