--- a/information.html
+++ b/information.html
@@ -144,7 +144,7 @@
 							</div>
 							<div class="bankcard__buttons">
 								<button class="btn btn--black" type="submit">Сохранить</button>
-								<button class="bankcard__delete" type="submit">Удалить адрес</button>
+								<button class="bankcard__delete" type="submit">Удалить аккаунт</button>
 							</div>
 						</form>
 					</div>
