--- a/addresses.html
+++ b/addresses.html
@@ -135,7 +135,7 @@
 							</div>
 						</div>
 						<div class="addresses__btn"> 
-							<div class="btn btn--black">Добавить карту</div>
+							<div class="btn btn--black">Добавить адрес</div>
 						</div>
 					</div>
 				</div>
