--- a/information.html
+++ b/information.html
@@ -115,7 +115,7 @@
 									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 								</svg></a>
-							<h1 class="backtitle__text">Мои адреса</h1><a class="backtitle__cross" href="home.html"> </a>
+							<h1 class="backtitle__text">Мои данные</h1><a class="backtitle__cross" href="home.html"> </a>
 						</div>
 						<!--	/backtitle-->
 						<form class="bankcard__form" action="#"> 
