--- a/home.html
+++ b/home.html
@@ -2571,6 +2571,9 @@
 					</div>
 				</div>
 				<!--	/catalog-->
+				<div class="floating-cart">
+					<div class="btn btn--white">Заказать 1 блюдо за 430₽</div>
+				</div>
 			</main>
 			<!-- footer-->
 			<footer class="footer">
